--- a/docs/tutorials/page-builder/create-a-new-page-builder-element.mdx
+++ b/docs/tutorials/page-builder/create-a-new-page-builder-element.mdx
@@ -1,6 +1,6 @@
 ---
 id: create-a-new-page-builder-element
-title: Create a New Page Builder element
+title: Create a New Page Builder Element
 sidebar_label: Create a New Element
 keywords: ["webiny", "Page Builder", "landing pages", "page element"]
 description: Create a new Page Builder element.
@@ -40,7 +40,7 @@ We're creating a sample plugin here, but the same principle applies no matter wh
 1. **A Webiny Project**
 
 This tutorial assumes you have already created a new Webiny project to work on.
-We recommend reading our [install webiny](/docs/tutorials/install-webiny) tutorial which will show you how to do it.
+We recommend reading our [install Webiny](/docs/tutorials/install-webiny) tutorial which will show you how to do it.
 
 2. **Organization of Files**
 
@@ -212,7 +212,7 @@ Finally, it’s up to the `render` function to define how the page element will 
 Notice the `props` that were passed to the render function. This object contains all of the relevant page element's data and settings.
 :::
 
-After registering the plugin in the Admin app it will appear in Page Builder editor toolbar as shown below:
+After registering the plugin in the Admin app it will appear in editor toolbar similar to the pre-defined elements as shown below:
 
 <!-- vale off -->
 
