--- a/docs/webiny-overview/performance-benchmark/pb-deliver-a-page.mdx
+++ b/docs/webiny-overview/performance-benchmark/pb-deliver-a-page.mdx
@@ -28,11 +28,13 @@ We are sending 1,000 users to the website with a ramp up period of 25s, meaning 
 - **Average response time:** 267 ms (0.27s)
 - **Throughput:** 3,613 req/sec
 
-**What this means?**
+:::info **What this means?**
 
 Requests per second is a number that helps you calculate how many users you can actually serve. The other part of that calculation is to know how your users behave. How fast they navigate between pages in this case.
 
 As an example say your average visitors stays on your site 5 minutes, and visits around 10 pages. That's 2 pages a minute. With a throughput of 3,613req/sec, you can handle 216,780 pages a minute, or 108,390 visitors in a minute.
+
+:::
 
 ### Response times
 
@@ -54,7 +56,7 @@ Average response time is 267ms, while 95% of all the requests were delivered wit
   alt="Page Builder benchmark - Throughput"
 />
 
-Average throughput was 3,613 req/sec, while at peak the system handled more than 6500 req/sec. From the picture you can see that the pattern was more or less consistent, especially after the first 2 minutes have elapsed.
+Average throughput was 3,613 req/sec, while at peak the system handled more than 6,500 req/sec. From the picture you can see that the pattern was more or less consistent, especially after the first 2 minutes have elapsed.
 
 ---
 
@@ -81,17 +83,17 @@ In our tests the cost factors are:
 <!-- prettier-ignore -->
 - **Total number of hits**: 2,274,117
 <!-- prettier-ignore -->
-- **Total traffic**: ~588GB (number of hits \* 25.9kb payload size)
+- **Total traffic**: ~58.9GB (number of hits \* 25.9kb payload size)
 
 Which brings us to:
 
 <!-- prettier-ignore -->
 - **Hits cost** = $2.73 ($0.0120 price per 10k HTTPS requests \* 2,274,117)
 <!-- prettier-ignore -->
-- **Traffic cost** = $49.98 ($0.085 price per GB \* 588 GB)
+- **Traffic cost** = $4.00 ($0.085 price per GB \* 58.9 GB)
 
 <!-- prettier-ignore -->
-**TOTAL COST** = $52.71
+**TOTAL COST** = $6.73
 
 ---
 
