--- a/docs/webiny-overview/performance-benchmark/introduction.mdx
+++ b/docs/webiny-overview/performance-benchmark/introduction.mdx
@@ -8,18 +8,22 @@ description: Webiny performance benchmark.
 
 :::tip What you’ll learn
 
-- what was benchmarked
+- what was tested
 - how the benchmark was done
 - how to replicate the results
 
 :::
 
+## About
+
+With this performance benchmark we wanted to show how well Webiny can handle the load, what performance you can expect, what cost is associated with different flows as well as what are the factors to additionally scale Webiny beyond the numbers shown here.
+
 ## Benchmark structure
 
 Webiny has several apps and APIs. For this benchmark we decided to pick 3 actions we felt are most relevant:
 
-1. Call the Headless CMS Manage API and insert new data ([view results](/docs/webiny-overview/performance-benchmark/headless-cms-write-benchmark))
-2. Call the Headless CMS Preview API and retrieve data ([view results](/docs/webiny-overview/performance-benchmark/headless-cms-read-benchmark))
+1. Call the Headless CMS Manage API and insert a new record ([view results](/docs/webiny-overview/performance-benchmark/headless-cms-write-benchmark))
+2. Call the Headless CMS Preview API and retrieve a record ([view results](/docs/webiny-overview/performance-benchmark/headless-cms-read-benchmark))
 3. Deliver a page created by the Page Builder ([view results](/docs/webiny-overview/performance-benchmark/pb-deliver-a-page))
 
 The tests on the Headless CMS API provide a good reference on both how the Headless CMS scales and performs, but the same result can be expected if you were to create a custom API endpoint on Webiny, not using the Headless CMS.
@@ -28,12 +32,12 @@ The Page Builder page delivery test is used to showcase how Webiny can serve you
 
 ## Execution
 
-We deployed Webiny into an AWS region, in our case `eu-west-2` (London). This is the basic vanilla Webiny setup you would get if you follow our install Webiny tutorial.
+We deployed Webiny into an AWS region, in our case `eu-west-2` (London). This is the basic vanilla Webiny setup you would get if you follow our [install Webiny tutorial](/docs/tutorials/install-webiny). We ran all 3 tests using this setup. Afterwards we modified one of the infrastructure resources and repeated tests 1 and 2. All the details can be found in the test results.
 
-Then we deployed an EC2 machine in the same region to minimize the network latency. This machine was used to generate the load for the test. The machine instance type we used was `c5.18xlarge`. We used a fairly powerful instance as we needed to generate a lot of load for some of the tests and didn't want to be CPU, memory or network bound.
+To run the test we deployed an EC2 machine in the same region to minimize the network latency. This machine was used to generate the load for the test. The machine instance type we used was `c5.18xlarge`. We used a fairly powerful instance as we needed to generate a lot of load for some of the tests and didn't want to be CPU, memory or network bound.
 
 The machine was a base Ubuntu instance with only Java and Apache JMeter installed.
-The tests were then executed using the Apache JMeter CLI. For each of the test we are providing a `jmx` file so you can run the same tests using Apache JMeter on your end.
+The tests were executed using the Apache JMeter CLI. For each of the tests we are providing a `jmx` file so you can run the same on your end.
 
 ## Replicate the test
 
