fix: replace "organisation" with "organization"

--- a/docs/key-topics/cloud-infrastructure/api/overview-vpc-custom.mdx
+++ b/docs/key-topics/cloud-infrastructure/api/overview-vpc-custom.mdx
@@ -30,7 +30,7 @@ import { Box, Button, Grid, Link } from "theme-ui";
 
 During the creation of a new Webiny project, one of the questions that shows up is should your new project be deployed in a Virtual Private Cloud (VPC) or not. The answer to that question depends on your needs, but usually for production environments, having resources deployed in a custom VPC is a reasonable choice.
 
-Note that the VPC setup presented here is a good foundation, but is not an ultimate solution. There is a chance that the setup might need additional cloud infrastructure resources or different configurations on your or your organisation's behalf.
+Note that the VPC setup presented here is a good foundation, but is not an ultimate solution. There is a chance that the setup might need additional cloud infrastructure resources or different configurations on your or your organization's behalf.
 
 :::info
 Virtual Private Clouds (VPCs) is a topic that requires some general networking knowledge and knowledge on AWS-specific concepts like regions, availability zones, different network gateways, and so on. Be sure to [read about it](https://aws.amazon.com/vpc/) before going through this section.
