--- a/docs/key-topics/deployment/introduction.mdx
+++ b/docs/key-topics/deployment/introduction.mdx
@@ -34,7 +34,7 @@ After a new Webiny project was set up, the next step is to deploy it. Learn what
 
 ## Deploying project applications - not projects
 
-As explained in the [project organisation](/docs/key-topics/project-organization) section, every Webiny project can consist of one or more project applications. Furthermore, every project application consists of [application code and the necessary infrastructure](/docs/key-topics/project-applications) that's needed in order to run it.
+As explained in the [project organization](/docs/key-topics/project-organization) section, every Webiny project can consist of one or more project applications. Furthermore, every project application consists of [application code and the necessary infrastructure](/docs/key-topics/project-applications) that's needed in order to run it.
 
 With that in mind, it's important to note that when talking about deployments, we're talking about **deploying project applications, not projects**. Meaning, if your project consisted of three project applications, in order to deploy the project completely, you would need to execute three separate Webiny CLI commands.
 
