--- a/docs/key-topics/project-applications.mdx
+++ b/docs/key-topics/project-applications.mdx
@@ -23,7 +23,7 @@ Project applications are higher-level organizational units formed from one or mo
 2. Cloud infrastructure that hosts your code or which is being utilized by it, which is also described and deployed using code. For that matter, by default, Webiny relies on a solution called [Pulumi](/docs/key-topics/deployment/iac-with-pulumi), which is a modern infrastructure as code solution.
 
 :::info
-Learn more about the fundamental organizational units - project applications and packages, by visiting the [Project Organisation](/docs/key-topics/project-organization) page.
+Learn more about the fundamental organizational units - project applications and packages, by visiting the [Project Organization](/docs/key-topics/project-organization) page.
 :::
 
 <!-- vale off -->
