fix: remove keyword "app" from commands

--- a/docs/how-to-guides/deployment/destroy-your-project.mdx
+++ b/docs/how-to-guides/deployment/destroy-your-project.mdx
@@ -32,18 +32,18 @@ yarn webiny destroy --env prod
 ```
 -->
 
-## The `app destroy` command
+## The `destroy` command
 
-This command lets you destroy cloud infrastructure previously deployed by a single project application. <!-- This can be handy if you want to avoid completely destroying all cloud infrastructure that was deployed by the default project applications, which is what the shown `destroy` command does. -->
+This command lets you destroy cloud infrastructure previously deployed within a [project application](/docs/key-topics/project-applications). <!-- This can be handy if you want to avoid completely destroying all cloud infrastructure that was deployed by the default project applications, which is what the shown `destroy` command does. -->
 
-As its first argument, the `app destroy` command receives the path to the project application folder. You also need to specify the environment in which the cloud infrastructure was previously deployed, which is specified via the `--env` argument.
+As its first argument, the `destroy` command receives the path to the project application folder. You also need to specify the environment into which the cloud infrastructure was previously deployed, which is specified via the `--env` argument.
 
 <!-- Note that, unlike with the `destroy` command, the `--env` argument is not optional and it needs to be provided explicitly. -->
 
 The following destroy commands destroy cloud infrastructure deployed for three project applications, all previously deployed into the `dev` environment:
 
 ```
-yarn webiny app destroy api --env dev
-yarn webiny app destroy apps/admin --env dev
-yarn webiny app destroy apps/site --env dev
+yarn webiny destroy api --env dev
+yarn webiny destroy apps/admin --env dev
+yarn webiny destroy apps/site --env dev
 ```
