--- a/docs/how-to-guides/deployment/preview-deployments.mdx
+++ b/docs/how-to-guides/deployment/preview-deployments.mdx
@@ -19,12 +19,12 @@ When doing more significant changes, it might be helpful to preview the deployme
 
 ## The Preview Flag
 
-In order to avoid performing unintended cloud infrastructure changes, you can use the preview flag upon executing the [app deploy](/docs/how-to-guides/deployment/deploy-your-project#the-app-deploy-command) command. Consider the following examples:
+In order to avoid performing unintended cloud infrastructure changes, you can use the preview flag upon executing the [deploy](/docs/how-to-guides/deployment/deploy-your-project#the-app-deploy-command) command. Consider the following examples:
 
 ```
-webiny app deploy api --env dev --preview
-webiny app deploy apps/admin --env dev --preview
-webiny app deploy apps/website --env dev --preview
+webiny deploy api --env dev --preview
+webiny deploy apps/admin --env dev --preview
+webiny deploy apps/website --env dev --preview
 ```
 
 Executing these commands won't perform any changes to your cloud infrastructure resources. They would just list all of the changes that would be applied, for example:
@@ -39,8 +39,3 @@ Executing these commands won't perform any changes to your cloud infrastructure 
 />
 
 <!-- vale on -->
-
-## FAQ
-**Does the preview flag work with the [`deploy`](/docs/how-to-guides/deployment/deploy-your-project#the-deploy-command) command?**
-
-The preview flag only works with the `app deploy` command, shown in this guide.
