fix: use title case for subtitles

--- a/docs/how-to-guides/deployment/configure-aws-credentials.mdx
+++ b/docs/how-to-guides/deployment/configure-aws-credentials.mdx
@@ -16,7 +16,7 @@ If you prefer the video version, check out our YouTube video below:
 
 ---
 
-## Step 1: Create your AWS account
+## Step 1: Create Your AWS Account
 
 :::info Already have an account?
 In that case skip to [step 2](#step-2-create-a-user-for-programmatic-access) to create your programmatic user.
@@ -36,7 +36,7 @@ Now input your credentials and create your account:
 
 ---
 
-## Step 2: Create a user for programmatic access
+## Step 2: Create a User for Programmatic Access
 
 Once you're registered, login and head to the AWS Management Console and select **IAM** under **Security, Identity & Compliance**:
 
@@ -81,7 +81,7 @@ Once you navigate off this screen, you will not be able to see the credentials a
 
 ![aws-user-created](./assets/configure-aws-credentials/aws-user-created.png)
 
-## Step 3: Configure the programmatic access
+## Step 3: Configure the Programmatic Access
 
 Now that you have the **Access key ID** and **Secret access key** it's time to store them on your development machine.
 
