--- a/docs/how-to-guides/deployment/deploy-your-project.mdx
+++ b/docs/how-to-guides/deployment/deploy-your-project.mdx
@@ -20,7 +20,7 @@ Webiny makes it easy to deploy your project, using the [Webiny CLI](/docs/key-to
 To learn more about project organization, check out the [Project organization](/docs/key-topics/project-organization) and [Project Applications](/docs/key-topics/project-applications) key topics. To learn more about deployments in general, check out the [Deployment](/docs/key-topics/deployment/introduction) key topics section.
 :::
 
-## Before we begin
+## Before We Begin
 
 Before we begin, it's worth mentioning that the deployment commands shown below also build your application code. They perform this task by just running the following **workspaces** command:
 
@@ -30,7 +30,7 @@ yarn webiny workspaces run build --folder {STACK_FOLDER}
 
 The command first finds all packages that are located in the project application folder. Then, for every found package, it runs the `build` command that's specified in the `webiny.config.js` - a configuration file that every package possesses. If the `build` command is defined, it gets executed, otherwise, the process just continues with the next package.
 
-## The `deploy` command
+## The `deploy` Command
 
 The `deploy` command can be used to completely deploy your project, or just a specific project application.
 
@@ -38,7 +38,7 @@ The `deploy` command can be used to completely deploy your project, or just a sp
 As explained in the [introduction to deployment](/docs/key-topics/deployment/introduction) key topic, doing a complete project deployment entails deploying all of its [project applications](/docs/key-topics/project-applications).
 :::
 
-### Deploying the whole project
+### Deploying the Whole Project
 To completely deploy your project, simply run the following command in your terminal of choice:
 
 ```
@@ -64,7 +64,7 @@ In general, when deploying projects or project applications, an [environment](/d
 yarn webiny deploy --env prod
 ```
 
-### Deploying a project application
+### Deploying a Project Application
 
 To deploy a specific project application, located withing your Webiny project, simple append the path to the folder in which the project application resides, for example:
 
