--- a/docs/how-to-guides/deployment/destroy-your-project.mdx
+++ b/docs/how-to-guides/deployment/destroy-your-project.mdx
@@ -32,7 +32,7 @@ yarn webiny destroy --env prod
 ```
 -->
 
-## The `destroy` command
+## The `destroy` Command
 
 This command lets you destroy cloud infrastructure previously deployed within a [project application](/docs/key-topics/project-applications). <!-- This can be handy if you want to avoid completely destroying all cloud infrastructure that was deployed by the default project applications, which is what the shown `destroy` command does. -->
 
