fix: adjust keywords

--- a/docs/contributing/new-page-template.mdx
+++ b/docs/contributing/new-page-template.mdx
@@ -2,7 +2,7 @@
 id: new-page-template
 title: New Page Template
 sidebar_label: New Page Template
-keywords: ["contributing", "documentation", "page", "template"]
+keywords: ["contributing", "documentation", "article", "template"]
 description: To start writing a new page, feel free to copy and paste the provided template.
 ---
 
