fix: use title case

--- a/docs/contributing/documentation.mdx
+++ b/docs/contributing/documentation.mdx
@@ -19,7 +19,7 @@ description: Get started guide on how to contribute documentation to Webiny.
 
 Although not the most favorite part for some developers, documentation is no less important than code. It's the key to a great developer experience. We wrote a few articles regarding how to approach documenting Webiny code and features.
 
-## Docs-first methodology
+## Docs-First Methodology
 
 We employ a documentation-first methodology to help ensure the documentation remains a complete and trusted resource. It makes communicating about the use of Webiny more efficient.
 
@@ -35,7 +35,7 @@ The more we reflexively add useful information, the more (and more successfully)
 
 Having a knowledge base in any form that is separate from the documentation would be against the documentation-first methodology. This includes sharing knowledge on the community forum or the community slack.
 
-### Troubleshooting section
+### Troubleshooting Section
 
 Often there are questions from users on particular topics. We find ourselves answering those same questions repeatedly, and this is something we should avoid. But we can't do it by not answering and supporting our users. Instead, we are taking a different approach.
 
@@ -47,7 +47,7 @@ In certain cases, you might not be ready to write down the answer and create the
 
 If you don't have the time to create the article - ask the user to open an issue under our docs portal with the question. Once we document this and close the issue, the user receives a notification.
 
-## Building the documentation app
+## Building the Documentation App
 
 Webiny docs repository uses [docusaurus](https://v2.docusaurus.io/) as the system to manage the documentation.
 
@@ -72,7 +72,7 @@ To run the lint execute this command in the root of the documentation app:
 There is also a very handy VS Code extension for Vale: https://github.com/errata-ai/vale-vscode
 :::
 
-## How to approach writing an article?
+## How To Approach Writing an Article?
 
 Before jumping in you should first do some planning and ask yourself a set of basic questions. Those questions are your guides. They help you structure your article in a much better way, and your readers will have a more pleasant experience reading it.
 
@@ -100,7 +100,7 @@ What should you be writing?
 
 Once you have this backing information, you're ready to start producing the content. The first things you should address are: title and intro. This gives you the initial form you can follow to create your article.
 
-### Question 3: What's next?
+### Question 3: What's Next?
 
 You have your article ready - what to do next?
 
@@ -108,7 +108,7 @@ You have your article ready - what to do next?
 
 **How and when to ask for reviews?** At 30% done (your first draft or outline). At this point, you’re not asking for in-depth feedback or reviewing for typos and grammar. The goal is for the reviewer to engage in the broader outline, flow, and structure of the document. At 90% done (your final draft), you’re asking them to go over the documentation with a fine-tooth comb and nit-pick any issues.
 
-### Document types
+### Document Types
 
 ![Document types](./assets/document-types.png)
 Source: https://www.youtube.com/watch?v=t4vKPhjcMZg
@@ -166,7 +166,7 @@ This is a simple and good way to structure your article:
 - Use inclusive language (they, them instead of his, hers).
 - Use the second-person point of view (you, yours)
 
-### Style guide
+### Style Guide
 
 To help everyone write and use the same writing style, Webiny documentation has a defined style guide.
 
