fix: add extra instructions

--- a/docs/contributing/new-page-template.mdx
+++ b/docs/contributing/new-page-template.mdx
@@ -21,6 +21,8 @@ keywords: ["key", "words", "go", "here"]
 description: { description - max 200 chars }
 ---
 
+
+<!-- Always include this section on top of the page. -->
 :::tip What You’ll Learn
 - how to create a brand new Webiny project
 - how to deploy it to your [AWS](https://aws.amazon.com/) account
@@ -64,6 +66,7 @@ Each topic should help users accomplish a specific task.
 
 The heading should:
 
+- Use title case (this tool helps - https://titlecaseconverter.com)
 - Describe the task and start with a verb. For example, `Create a package` or
   `Configure a pipeline`.
 - Be short and descriptive (up to ~50 chars).
@@ -71,11 +74,22 @@ The heading should:
   Never skip a hierarchy level (like `h2` > `h4`). It breaks the table of
   contents and can affect the breadcrumbs.
 
-<!-- ## FAQ
+<!-- The following is optional, but can be pretty useful to users. -->
 
-Include any FAQs that you can foresee. -->
+## FAQ
 
-<!-- ## Troubleshooting
+#### What if A is B?
+If A is B, the C.
 
-Include any troubleshooting steps that you can foresee. -->
+#### What to do in case of X?
+In case of X, just stay calm.
+
+## Troubleshooting
+
+#### What if A is B?
+If A is B, the C.
+
+#### What to do in case of X?
+In case of X, just stay calm.
+
 ```
