fix: reword sentence

--- a/docs/key-topics/webiny-cli.mdx
+++ b/docs/key-topics/webiny-cli.mdx
@@ -34,7 +34,7 @@ Contains a set of commands for working with your [project applications](/docs/ke
 
 #### `yarn webiny app deploy {folder} --env {env}`
 
-Builds all of the project application packages and deploys cloud infrastructure resources defined within, into the specified environment.
+Builds all of the project applications (packages) and deploys cloud infrastructure resources defined within them, into the specified environment.
 
 #### `yarn webiny app destroy {folder} --env {env}`
 
