fix: update link

--- a/docs/key-topics/webiny-cli.mdx
+++ b/docs/key-topics/webiny-cli.mdx
@@ -50,14 +50,14 @@ For more hands-on information on the above listed commands, please visit the [De
 
 ### `yarn webiny info --env {env}`
 
-Returns a couple of useful URLs, for example, the URL over which the deployed GraphQL API can be accessed.
+Returns useful URLs, for example, the URL over which the deployed GraphQL API can be accessed.
 
 ### `yarn webiny ws run {cmd} --folder {f} --scope {s}`
 
 Runs provided command, for example the `watch` command, across multiple workspaces (packages) in your project. Workspaces are defined via either the `--folder` or `--scope` argument.
 
 :::info
-For more information, please visit the [Working with Workspaces](#) guide.
+For more information, please visit the [Working with Workspaces](/docs/how-to-guides/working-with-workspaces) guide.
 :::
 
 ## FAQ
