fix: update image alt

--- a/docs/key-topics/ci-cd.mdx
+++ b/docs/key-topics/ci-cd.mdx
@@ -39,7 +39,7 @@ In general, the CI/CD workflow consists of a couple of phases:
   src={require("./assets/ci-cd/cicd_infinity.png").default}
   className="no-shadow"
   style={{ marginBottom: 20 }}
-  alt="Webiny Cloud Infrastructure - Environments"
+  alt="CI/CD Phases"
 />
 
 <!-- vale on -->
