fix: correct Workspaces link

--- a/docs/key-topics/webiny-cli.mdx
+++ b/docs/key-topics/webiny-cli.mdx
@@ -20,7 +20,7 @@ Webiny CLI (command line interface) is the central tool that you'll be using thr
 
 Out of the box, it offers a couple of commands that will let you perform essential tasks like deployments, development and production code builds, different scaffolding, and so on.
 
-Additionally, the Webiny CLI is pluggable, meaning you can easily create your own custom commands, or even replace the existing ones. Please visit our [Webiny CLI - Custom Commands](#) guide for more information.
+Additionally, the Webiny CLI is pluggable, meaning you can easily create your own custom commands, or even replace the existing ones. Please visit the [Adding Custom Commands](/docs/how-to-guides/webiny-cli/adding-custom-commands) guide for more information.
 
 :::info
 For a full list of commands, in your terminal of choice, make sure to run `yarn webiny --help`.
@@ -57,7 +57,7 @@ Returns useful URLs, for example, the URL over which the deployed GraphQL API ca
 Runs provided command, for example the `watch` command, across multiple workspaces (packages) in your project. Workspaces are defined via either the `--folder` or `--scope` argument.
 
 :::info
-For more information, please visit the [Working with Workspaces](/docs/how-to-guides/working-with-workspaces) guide.
+For more information, please visit the [Working With Workspaces](/docs/how-to-guides/webiny-cli/working-with-workspaces) guide.
 :::
 
 ## FAQ
